# C-Labs

./: CMakeLists.txt  README.md  lab1.c  main.c
lab1/: lab23.c  lab5.c  lab6.c  lab8.c
lab2/: lab14.c  lab2.37.c  lab2.37new.c  lab2.4.c
lab3/: lab3.18a.c  lab3.18b.c  lab3.18bnew.c  lab3a.2.c  text.txt
test/: stack.c  stack.h  structures.c
